Added link to Github

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
           <button type="button" class="btn btn-outline-dark">
             Next Seven Days
           </button>
+          <a href="https://github.com/sanmewin/my_weather_app.git">My GitHub repository</a>
         </div>
       </div>
     </div>
